# iotconnect-c-nrf

./: CMakeLists.txt  Help.txt  Kconfig  README.md  Update_Info.txt  overlay-pdn_ipv4.conf  prj.conf
IoTConnect/cert/: certificates.h
IoTConnect/src/: IoTConnectSDK.c  IoTConnectSDK.h
boards/: nrf9161dk_nrf9161_ns.overlay
src/: IoTConnect_Config.h  main.c  main.h
